--- a/conf.json.sample
+++ b/conf.json.sample
@@ -5,6 +5,10 @@
 	"dropbox_secret": "YOUR_DROPBOX_SECRET",
 	"dropbox_base_path": "YOUR_DROPBOX_APP_PATH",
     "use_email": true,
+    "email_server": "192.168.1.11",
+    // "email_username": "your email server username",
+    // "email_password": "your email server password",
+    "email_from": "your email address",
     "email_address": ["your email address"],
 	"min_upload_seconds": 0.5,
 	"min_motion_frames": 8,
