Show a useful sample email server.

--- a/conf.json.sample
+++ b/conf.json.sample
@@ -5,7 +5,7 @@
 	"dropbox_secret": "YOUR_DROPBOX_SECRET",
 	"dropbox_base_path": "YOUR_DROPBOX_APP_PATH",
     "use_email": true,
-    "email_server": "192.168.1.11",
+    "email_server": "smtp.gmail.com:587",
     // "email_username": "your email server username",
     // "email_password": "your email server password",
     "email_from": "your email address",
